# hmatrix-static

./: TODO  Test.hs  hmatrix-static.cabal
Data/Packed/: Static.hs
Data/Packed/Static/: Convert.hs  Imports.hs  Internal.hs  Matrix.hs  ST.hs  Shapes.hs  Syntax.hs  Vector.hs
Data/Packed/Static/Internal/: Matrix.hs  Vector.hs
Numeric/LinearAlgebra/: Static.hs
Numeric/LinearAlgebra/Static/: Algorithms.hs  Interface.hs
examples/: MatrixFuncs.hs  VectorFuncs.hs
